# ouroboros

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  README.md  config.py  exchange.py  main.py  notifier.py  pyproject.toml  strategy.py
.aider.tags.cache.v4/: cache.db
logs/: bot.log.2
