[tool.poetry]
name = "ouroboros req"
version = "0.1.0"
description = "Ouroboros's pack"
authors = ["draktharr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ccxt = "^4.5.39"
python-dotenv = "^1.2.1"
pandas = "^3.0.1"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
